[gd_scene load_steps=12 format=3 uid="uid://dygc6hvpoqsr1"]

[ext_resource type="Script" path="res://hud.gd" id="1_me20i"]
[ext_resource type="FontFile" uid="uid://b1fcjres08u3w" path="res://Chomsky.otf" id="1_nonwh"]
[ext_resource type="Texture2D" uid="uid://i2616j025ynk" path="res://gold.png" id="3_dad8d"]
[ext_resource type="Texture2D" uid="uid://dbwp1f2tg4xw1" path="res://Item 3-1.png.png" id="4_6tmju"]
[ext_resource type="Texture2D" uid="uid://d4goplhmfbp2g" path="res://Unicorn's Evolving Swords_00.png" id="5_86fcq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_msj7j"]
atlas = ExtResource("3_dad8d")
region = Rect2(0, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_whp7c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_msj7j")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_1kbjt"]
atlas = ExtResource("4_6tmju")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_vak2t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kbjt")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_76mse"]
atlas = ExtResource("5_86fcq")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_scili"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_76mse")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_me20i")

[node name="Wave" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -122.0
offset_top = 20.0
offset_right = 122.0
offset_bottom = 123.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_nonwh")
theme_override_font_sizes/font_size = 100
text = "Wave"

[node name="Money" type="Label" parent="."]
offset_top = 18.0
offset_right = 141.0
offset_bottom = 86.0
theme_override_fonts/font = ExtResource("1_nonwh")
theme_override_font_sizes/font_size = 64
text = "Cash: 0"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Money"]
position = Vector2(281, 31)
scale = Vector2(1.71875, 1.42188)
sprite_frames = SubResource("SpriteFrames_whp7c")

[node name="Life" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -62.0
offset_top = -73.0
offset_right = 66.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_nonwh")
theme_override_font_sizes/font_size = 64
text = "200"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Life"]
position = Vector2(179, 38)
scale = Vector2(2.79687, 2.03125)
sprite_frames = SubResource("SpriteFrames_vak2t")

[node name="Instruction" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -693.0
offset_top = -103.0
offset_right = 693.0
offset_bottom = 103.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_nonwh")
theme_override_font_sizes/font_size = 100
text = "Move with WASD, fight with O. 
             Kill all enemies!"
autowrap_mode = 2

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartWaveText" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -458.0
offset_top = 119.0
offset_right = 458.0
offset_bottom = 187.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_nonwh")
theme_override_font_sizes/font_size = 64
text = "Press SPACE to start next wave!"

[node name="Speed" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -91.0
offset_right = 313.0
grow_vertical = 0
theme_override_font_sizes/font_size = 64
text = "200 speed"
vertical_alignment = 2

[node name="attack" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -117.0
offset_top = -93.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_nonwh")
theme_override_font_sizes/font_size = 64
text = "20"
horizontal_alignment = 2
vertical_alignment = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="attack"]
position = Vector2(-16, 56.0001)
scale = Vector2(1.98437, 1.6875)
sprite_frames = SubResource("SpriteFrames_scili")

[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
